# akita-python-har

./: README.md  setup.cfg  tests.py
akita_har/: __init__.py  models.py
testdata/: trace_1.har  trace_2.har
