[metadata]
name = akita_har
version = attr: akita_har.__version__
url = https://github.com/akitasoftware/akita-python-har
author = Cole Schlesinger
author_email = cole@akitasoftware.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
description = Utilities for working with HTTP Archive (HAR) files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pydantic
packages = find:
python_requires = >=3.6
